// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getCleanPasswords should get correct clean passwords 1`] = `
[
  {
    "changes": [
      {
        "letter": "a",
        "substitution": "4",
      },
      {
        "letter": "u",
        "substitution": "|_|",
      },
      {
        "letter": "m",
        "substitution": "nn",
      },
      {
        "letter": "a",
        "substitution": "4",
      },
    ],
    "password": "Pau$mard",
  },
  {
    "changes": [
      {
        "letter": "a",
        "substitution": "4",
      },
      {
        "letter": "u",
        "substitution": "|_|",
      },
      {
        "letter": "a",
        "substitution": "4",
      },
    ],
    "password": "Pau$nnard",
  },
]
`;

exports[`getCleanPasswords should limit the substitutions correctly 1`] = `
[
  {
    "changes": [
      {
        "letter": "f",
        "substitution": "v",
      },
      {
        "letter": "f",
        "substitution": "v",
      },
    ],
    "password": "ff",
  },
  {
    "changes": [
      {
        "letter": "f",
        "substitution": "v",
      },
      {
        "letter": "u",
        "substitution": "v",
      },
    ],
    "password": "fu",
  },
  {
    "changes": [
      {
        "letter": "f",
        "substitution": "v",
      },
    ],
    "password": "fv",
  },
]
`;

exports[`getCleanPasswords should substitute to multiple symbols correctly 1`] = `
[
  {
    "changes": [
      {
        "letter": "a",
        "substitution": "@",
      },
      {
        "letter": "fi",
        "substitution": "ﬁ",
      },
    ],
    "password": "pacific",
  },
  {
    "changes": [
      {
        "letter": "a",
        "substitution": "@",
      },
    ],
    "password": "paciﬁc",
  },
]
`;

exports[`getCleanPasswords should substitute to multiple variants correctly 1`] = `
[
  {
    "changes": [
      {
        "letter": "f",
        "substitution": "v",
      },
      {
        "letter": "f",
        "substitution": "v",
      },
    ],
    "password": "ff",
  },
  {
    "changes": [
      {
        "letter": "f",
        "substitution": "v",
      },
      {
        "letter": "u",
        "substitution": "v",
      },
    ],
    "password": "fu",
  },
  {
    "changes": [
      {
        "letter": "f",
        "substitution": "v",
      },
    ],
    "password": "fv",
  },
  {
    "changes": [
      {
        "letter": "u",
        "substitution": "v",
      },
      {
        "letter": "f",
        "substitution": "v",
      },
    ],
    "password": "uf",
  },
  {
    "changes": [
      {
        "letter": "u",
        "substitution": "v",
      },
      {
        "letter": "u",
        "substitution": "v",
      },
    ],
    "password": "uu",
  },
  {
    "changes": [
      {
        "letter": "u",
        "substitution": "v",
      },
    ],
    "password": "uv",
  },
  {
    "changes": [
      {
        "letter": "w",
        "substitution": "vv",
      },
    ],
    "password": "w",
  },
  {
    "changes": [
      {
        "letter": "f",
        "substitution": "v",
      },
    ],
    "password": "vf",
  },
  {
    "changes": [
      {
        "letter": "u",
        "substitution": "v",
      },
    ],
    "password": "vu",
  },
  {
    "changes": [],
    "password": "vv",
  },
]
`;
